@@ -1,3 +1,15 @@
+2012-07-06 Borut Razem <borut.razem AT gmail.com>
+
+	* src/pic16/main.c: bug patched with sdcc-3.2.0-config_fix.diff
+	  #3539804 - #pragma config and certain string constants,
+	  thanks to Herbert Potzl
+
+2012-06-30 Borut Razem <borut.razem AT gmail.com>
+
+	* support/scripts/sdcc.nsi:
+	  fixed 'Installer suggest "C:\Program Files\SDCC" instead of
+	  "C:\Program Files (x86)\SDCC"' problem
+
 2012-07-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
